Project simple_bank_api {
  database_type: 'PostgreSQL'
  Note: '''
    # Simple Bank API database
  '''
}

Table users as U {
    username varchar [pk]
    hashed_password varchar [not null]
    full_name varchar [not null]
    email varchar [unique, not null]
    create_at timestamptz [not null, default: `now()`]
    password_changed_at timestamptz [not null, default: `"0001-01-01 00:00:00Z"`]
}

Table accounts as A {
  id bigserial [pk]
  owner varchar [ref: > U.username, not null]
  balance bigint [not null]
  currency varchar [not null]
  create_at timestamptz [not null, default: `now()`]
  
  indexes {
    owner
    (owner, currency) [unique]
  }
}

Table entries {
  id bigserial [pk]
  account_id bigint [not null, ref: > A.id]
  amount bigint [not null, note:'can be negative or positive']
  create_at timestamptz [not null,default: `now()`]
  
  indexes {
    account_id
  }
}

Table transfers {
  id bigserial [pk]
  from_account_id bigint [not null, ref: > A.id]
  to_account_id bigint [not null, ref: > A.id]
  amount bigint [not null,  note:'must be positive']
  create_at timestamptz [not null, default: `now()`]
  
  indexes {
    from_account_id
    to_account_id
    (from_account_id, to_account_id)
  }
}

Table sessions{
  "id" uuid [pk]
  "username" varchar [not null, ref: > U.username]
  "refresh_token" varchar [not null]
  "user_agent" varchar [not null]
  "client_ip" varchar [not null]
  "is_blocked" boolean [not null]
  "expires_at" timestamptz [not null]
  "create_at" timestamptz [not null, default: `now()`]
}

